# lpFun

./: .gitignore  CITATION.cff  LICENSE.txt  README.md  environment.yml  lpFun.bib  pyproject.toml  requirements.txt  setup.py  test.py  tutorial.py
.github/workflows/: conda-test.yml
docs/: tutorial.py
src/lpfun/: __init__.py  transform.py  utils.py
src/lpfun/core/: __init__.py  atoms.py  molecules.py  multi_index_set.py  set.py  utils.py
src/lpfun/iterators/: __init__.py  compatible_integer_list.py  multi_index_set.py
src/newfun/: __init__.py  transform.py  transform_utils.py  transform_utils_njit.py  utils.py  utils_njit.py
src/newfun/core/: __init__.py  compatible_integer_list.py  multi_index_set.py
